--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Simplify error handling
+anyhow = "1.0"
+
+# Logging
 log = "0.4"
 env_logger = "0.9"
+
+# Converting from json and back
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
