--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -10,11 +10,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # Nightly is required for `tarpaulin` to get coverage from doc tests
-      - name: Install nightly toolchain
+      - name: Install stable toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly-2021-11-01
+          toolchain: stable
           override: true
 
       - name: Run cargo-tarpaulin
